--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,61 @@ on:
   push:
   workflow_dispatch:
 jobs:
+  deploy-STG:
+    runs-on: ubuntu-latest
+    needs: deploy-STG
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+      - shell: bash
+        run: |
+           sh 'src/main/scripts/deploySTG.sh'
+           
+  Smoketeste:
+    runs-on: ubuntu-latest
+    needs: deploy-STG
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+      - shell: bash
+        run: |
+           sh 'src/main/scripts/smoketest.sh'
+           
+   testeIntegrados:
+    runs-on: ubuntu-latest
+    needs: Smoketest
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+      - shell: bash
+        run: |
+           sh 'src/main/scripts/testeIntegrado.sh'
+       
+  unit-test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - run: mvn test  
+    - name: Generate JaCoCo Badge
+      id: jacoco
+      uses: cicirello/jacoco-badge-generator@v2.0.1
+    - name: Log coverage percentage
+      run: |
+        echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+        echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"    
+    - name: Upload JaCoCo coverage report
+      uses: actions/upload-artifact@v4.4.0
+      with:
+        name: jacoco-report
+        path: target/site/jacoco
+        
   build: 
     runs-on: ubuntu-latest
     steps:
