--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy-STG:
     runs-on: ubuntu-latest
-    needs: deploy-STG
+    # needs: deploy-STG
     if: github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v3
