--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
            
   Smoketeste:
     runs-on: ubuntu-latest
-    needs: deploy-STG
+    # needs: deploy-STG
     if: github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v3
@@ -26,9 +26,9 @@ jobs:
         run: |
            sh 'src/main/scripts/smoketest.sh'
            
-   testeIntegrados:
+  testeIntegrados:
     runs-on: ubuntu-latest
-    needs: Smoketest
+    # needs: Smoketest
     if: github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v3
