--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,38 +4,38 @@ on:
   push:
   workflow_dispatch:
 jobs:
-  deploy-STG:
-    runs-on: ubuntu-latest
-    # needs: deploy-STG
-    if: github.ref == 'refs/heads/develop'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy 
-      - shell: bash
-        run: |
-           sh 'src/main/scripts/deploySTG.sh'
+  # deploy-STG:
+  #   runs-on: ubuntu-latest
+  #   # needs: deploy-STG
+  #   if: github.ref == 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy 
+  #     - shell: bash
+  #       run: |
+  #          sh 'src/main/scripts/deploySTG.sh'
            
-  Smoketeste:
-    runs-on: ubuntu-latest
-    # needs: deploy-STG
-    if: github.ref == 'refs/heads/develop'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy 
-      - shell: bash
-        run: |
-           sh 'src/main/scripts/smoketest.sh'
+  # Smoketeste:
+  #   runs-on: ubuntu-latest
+  #   # needs: deploy-STG
+  #   if: github.ref == 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy 
+  #     - shell: bash
+  #       run: |
+  #          sh 'src/main/scripts/smoketest.sh'
            
-  testeIntegrados:
-    runs-on: ubuntu-latest
-    # needs: Smoketest
-    if: github.ref == 'refs/heads/develop'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy 
-      - shell: bash
-        run: |
-           sh 'src/main/scripts/testeIntegrado.sh'
+  # testeIntegrados:
+  #   runs-on: ubuntu-latest
+  #   # needs: Smoketest
+  #   if: github.ref == 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy 
+  #     - shell: bash
+  #       run: |
+  #          sh 'src/main/scripts/testeIntegrado.sh'
        
   unit-test:
     runs-on: ubuntu-latest
