--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,16 +26,16 @@ jobs:
   #       run: |
   #          sh 'src/main/scripts/smoketest.sh'
            
-  # testeIntegrados:
-  #   runs-on: ubuntu-latest
-  #   # needs: Smoketest
-  #   if: github.ref == 'refs/heads/develop'
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy 
-  #     - shell: bash
-  #       run: |
-  #          sh 'src/main/scripts/testeIntegrado.sh'
+  testeIntegrados:
+    runs-on: ubuntu-latest
+    # needs: Smoketest
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+      - shell: bash
+        run: |
+           sh 'src/main/scripts/testeIntegrado.sh'
        
   unit-test:
     runs-on: ubuntu-latest
