--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Deploy 
       - shell: bash
         run: |
-           sh 'src/main/scripts/deploySTG.sh'
+                     echo "Deploy STG"
            
   Smoketest:
     runs-on: ubuntu-latest
