--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,35 +6,38 @@ on:
 jobs:
   deploy-STG:
     runs-on: ubuntu-latest
-    # needs: deploy-STG
+    # needs: publish
+
     if: github.ref == 'refs/heads/develop'
     steps:
       - name: Deploy 
-      - shell: bash
+        shell: bash
         run: |
-                     echo "Deploy STG"
-           
+          echo "Deploy STG"
+
   Smoketest:
     runs-on: ubuntu-latest
-    # needs: deploy-STG
+    needs: deploy-STG
+
     if: github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v3
       - name: Deploy 
-      - shell: bash
+        shell: bash
         run: |
-           sh 'src/main/scripts/smoketest.sh'
-           
-   testeIntegrados:
+          sh 'src/main/scripts/smoketest.sh'
+
+  testeIntegrados:
     runs-on: ubuntu-latest
-    # needs: Smoketest
+    needs: Smoketest
     if: github.ref == 'refs/heads/develop'
     steps:
       - uses: actions/checkout@v3
       - name: Deploy 
-      - shell: bash
+        shell: bash
         run: |
-           sh 'src/main/scripts/testeIntegrado.sh'
+          sh 'src/main/scripts/testeIntegrado.sh'
+
 
        
   unit-test:
