--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,39 +4,39 @@ on:
   push:
   workflow_dispatch:
 jobs:
-  deploy-STG:
-    runs-on: ubuntu-latest
-    # needs: publish
+  # deploy-STG:
+  #   runs-on: ubuntu-latest
+  #   # needs: publish
 
-    if: github.ref == 'refs/heads/develop'
-    steps:
-      - name: Deploy 
-        shell: bash
-        run: |
-          echo "Deploy STG"
+  #   if: github.ref == 'refs/heads/develop'
+  #   steps:
+  #     - name: Deploy 
+  #       shell: bash
+  #       run: |
+  #         echo "Deploy STG"
 
-  Smoketest:
-    runs-on: ubuntu-latest
-    needs: deploy-STG
+  # Smoketest:
+  #   runs-on: ubuntu-latest
+  #   needs: deploy-STG
 
-    if: github.ref == 'refs/heads/develop'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy 
-        shell: bash
-        run: |
-          sh 'src/main/scripts/smoketest.sh'
+  #   if: github.ref == 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy 
+  #       shell: bash
+  #       run: |
+  #         sh 'src/main/scripts/smoketest.sh'
 
-  testeIntegrados:
-    runs-on: ubuntu-latest
-    needs: Smoketest
-    if: github.ref == 'refs/heads/develop'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy 
-        shell: bash
-        run: |
-          sh 'src/main/scripts/testeIntegrado.sh'
+  # testeIntegrados:
+  #   runs-on: ubuntu-latest
+  #   needs: Smoketest
+  #   if: github.ref == 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy 
+  #       shell: bash
+  #       run: |
+  #         sh 'src/main/scripts/testeIntegrado.sh'
 
 
        
