--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,28 @@ on:
   push:
   workflow_dispatch:
 jobs:
+  SmoketestPre:
+    runs-on: ubuntu-latest
+    needs: deploy-Pre
+    if: github.ref == 'ref/heads/release'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy
+        shell: bash
+        run: |
+          sh 'src/main/scripts/smoketest.sh'
+
+  testeFuncionais:
+    runs-on: ubuntu-latest 
+    needs: SmoketestPre
+    if: github.ref == 'refs/heads/release'
+    steps: 
+      - uses: actions/checkout@v3
+      - name: Deploy
+      shell: bash
+      run: |
+        sh 'src/main/scripts/testesFuncionais.sh'
+ 
   deploy-STG:
     runs-on: ubuntu-latest
     # needs: publish
