--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,9 +4,10 @@ on:
   push:
   workflow_dispatch:
 jobs:
+  
   SmoketestPre:
     runs-on: ubuntu-latest
-    needs: deploy-Pre
+    # needs: deploy-Pre
     if: github.ref == 'ref/heads/release'
     steps:
       - uses: actions/checkout@v3
@@ -14,7 +15,7 @@ jobs:
         shell: bash
         run: |
           sh 'src/main/scripts/smoketest.sh'
-
+  
   testeFuncionais:
     runs-on: ubuntu-latest 
     needs: SmoketestPre
@@ -22,9 +23,9 @@ jobs:
     steps: 
       - uses: actions/checkout@v3
       - name: Deploy
-      shell: bash
-      run: |
-        sh 'src/main/scripts/testesFuncionais.sh'
+      # shell: bash
+      # run: |
+      #   sh 'src/main/scripts/testesFuncionais.sh'
  
   deploy-STG:
     runs-on: ubuntu-latest
