Add dependency on SmoketestPre for testeFuncionais

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
 
   testeFuncionais:
     runs-on: ubuntu-latest
-    # needs: SmoketestPre
+    needs: SmoketestPre
     if: github.ref == 'ref/heads/release'
     steps:
       - uses: actions/checkout@v3
