--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,7 +56,7 @@ jobs:
       
   deploy-STG:
     runs-on: ubuntu-latest
-    # needs: publish
+    needs: build
 
     if: github.ref == 'refs/heads/develop'
     steps:
