--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ jobs:
   
   SmoketestPre:
     runs-on: ubuntu-latest
-    # needs: deploy-Pre
+    needs: build
     if: github.ref == 'ref/heads/release'
     steps:
       - uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
  
   deploy-STG:
     runs-on: ubuntu-latest
-    # needs: publish
+    needs: build
 
     if: github.ref == 'refs/heads/develop'
     steps:
