--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -87,7 +87,7 @@ jobs:
 
   code-analisys:
     runs-on: ubuntu-latest
-    needs: unit-test
+    needs: build
     steps:
     - uses: actions/checkout@v2
       with:
