--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -87,7 +87,7 @@ jobs:
 
   code-analisys:
     runs-on: ubuntu-latest
-    needs: build
+    needs: unit-test
     steps:
     - uses: actions/checkout@v2
       with:
@@ -120,7 +120,7 @@ jobs:
         
   build: 
     runs-on: ubuntu-latest
-    needs: unit-test
+    needs: code-analisys
     steps:
     - uses: actions/checkout@v3
       with:
