--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -110,22 +110,22 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    # - name: Build and analyze
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_AUTOGLASS }}
-    #   run: |
-    #     mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-    #     -Dsonar.projectKey=viniciussalencarr \
-    #     -Dsonar.organization=NOME_DA_SUA_ORG_NO_SONAR \
-    #     -Dsonar.host.url=https://sonarcloud.io \
-    #     -Dsonar.qualitygate.wait=true
-
     - name: Build and analyze
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_AUTOGLASS }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.qualitygate.wait=true -Dsonar.projectKey=ViniciussAlencarr_37CLD_Devops
+      run: |
+        mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+        -Dsonar.projectKey=viniciussalencarr \
+        -Dsonar.organization=Vinicius Alencar \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.qualitygate.wait=true
+
+    # - name: Build and analyze
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_AUTOGLASS }}
+    #   run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.qualitygate.wait=true -Dsonar.projectKey=ViniciussAlencarr_37CLD_Devops
 
         
   build: 
