--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -86,31 +86,21 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco
 
-  code-analisys:
+   code-analisys:
     runs-on: ubuntu-latest
     needs: unit-test
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3 # Atualizado para v3
       with:
         fetch-depth: 0
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3 # Atualizado para v3
       with:
-        java-version: 17
+        java-version: '17'
+        distribution: 'temurin'
 
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
+    # ... (mantenha os caches) ...
 
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
     - name: Build and analyze
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -121,12 +111,6 @@ jobs:
         -Dsonar.organization=viniciussalencarr \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.qualitygate.wait=true
-
-    # - name: Build and analyze
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #   run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.qualitygate.wait=true -Dsonar.projectKey=ViniciussAlencarr_37CLD_Devops
 
         
   build: 
