--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -86,7 +86,7 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco
 
-   code-analisys:
+ code-analisys:
     runs-on: ubuntu-latest
     needs: unit-test
     steps:
@@ -99,7 +99,20 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    # ... (mantenha os caches) ...
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
 
     - name: Build and analyze
       env:
@@ -111,7 +124,6 @@ jobs:
         -Dsonar.organization=viniciussalencarr \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.qualitygate.wait=true
-
         
   build: 
     runs-on: ubuntu-latest
